@@ -6,6 +6,7 @@ https://github.com/dbermond/screencast/
 ### changelog
 
 ### version next
+- added support for AOM AV1 video encoder
 - fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
 - new option: select tickness of the screen region border delimiter
 - new option: select the X server display and screen
